# lib_bsw

./: .gitignore  CMakeLists.txt  configure.h.in
ext/: CMakeLists.txt
ext/cpptrace/: CMakeLists.txt
ext/libassert/: CMakeLists.txt
ext/nlohmann/: CMakeLists.txt
ext/pfr/: CMakeLists.txt
ext/pugixml/: CMakeLists.txt
include/bsw/: array_view.hh  bit_ops.hh  byte_order.hh  config_path.hh  console.hh  dlfcn.hh  environment.hh  errors.hh  exception.hh  export.h  id.hh  macros.hh  observer.hh  override.hh  pp_for_each.h  predef.h  random.hh  register_at_exit.hh  shm.hh  singleton.hh  sorted_array.hh  switch_by_string.hh  uri.hh  uuid.hh  uuid_generator.hh  whereami.hh
include/bsw/digest/: crc32.hh  digest_engine.hh  md4.hh  md5.hh  sha1.hh  sha2.hh
include/bsw/fpe/: fpe.hh  fpe_c99.hh  fpe_windows.hh
include/bsw/io/: base64.hh  binary_reader.hh  binary_writer.hh  buffered_bidi_stream_buf.hh  buffered_stream_buf.hh  compression_type.hh  deflating_stream.hh  digest_stream.hh  inflating_stream.hh  ios_init.hh  memory_stream_buf.hh  random_stream.hh  stream_copier.hh  tee_stream.hh  unbuffered_stream_buf.hh
include/bsw/io/compression_stream/: brotli_stream.hh  bzip_stream.hh  compression_stream.hh  libz_stream.hh  lzma_stream.hh
include/bsw/json/: json.hh  json_fwd.hh
include/bsw/logger/: abstract_printer.hh  active_object.hh  console.hh  console_printer.hh  debug_device.hh  device.hh  file_device.hh  formatter.hh  function_name.hh  layout.hh  layout_commands.hh  level.hh  local_device.hh  locus.hh  log_record_layout.hh  logger.hh  logger_fwd.hh  logger_helper.hh  multi_setter.hh  predicate.hh  record.hh  rotating_device.hh  simple_printer.hh  standard_layout.hh  system.hh  thread_id.hh
include/bsw/macros/: pp_narg.hh  ppcat.hh  stringize.hh
include/bsw/mp/: all_same.hh  constexpr_for.hh  if_then_else.hh  introspection.hh  one_of.hh  primitive.hh  typelist.hh
include/bsw/mp/callable/: callable.hpp  function.hpp  functor.hpp  helpers.hpp  member_function.hpp
include/bsw/mp/type_name/: type_name.clang.hpp  type_name.gcc.hpp  type_name.hpp  type_name.msvc.hpp
include/bsw/mt/: active_object.hh  thread_id.hh
include/bsw/s11n/: s11n.hh
include/bsw/s11n/detail/: archive.hh  cista.hh  s11n_convert.hh  traits_s11n.hh
include/bsw/strings/: ascii.hh  number_formatter.hh  number_parser.hh  numeric_string.hh  string_constant.hh  string_hash.hh  string_tokenizer.hh  string_utils.hh  wchar.hh
include/bsw/warn/: conv64to32  define_deprecated  dll_interface  dll_interface_base  generate.py  pop.hh  possible_loss_of_data  possible_loss_of_data_op  push.hh  reserved_macro  sign_conversion  undef  undefined_inline  undefined_internal  unneeded_internal_declaration  unneeded_member_function  unreachable_code  unused_macros  warn_config.h.in  warns.yml
packaging/: CMakeLists.txt  bswConfig.cmake
src/: CMakeLists.txt  config_path.cc  configure.h.in  console.cc  dlfcn.cc  environment.cc  errors.cc  exception.cc  random.cc  register_at_exit.cc  shm.cc  uri.cc  uuid.cc  uuid_generator.cc  whereami.cc
src/cmake/: brotli.cmake  bz2.cmake  liblzma.cmake  zlib.cmake  zstd.cmake
src/digest/: crc32.cc  digest_engine.cc  md4.cc  md5.cc  sha1.cc  sha2.cc
src/fpe/: fpe.cc
src/fpe/double-conversion/: bignum.cc
src/ini/: ini_parser.cc
src/io/: base64.cc  binary_reader.cc  binary_writer.cc  deflating_stream.cc  digest_stream.cc  inflating_stream.cc  ios_init.hh  memory_stream_buf.cc  random_stream.cc  stream_copier.cc  tee_stream.cc
src/io/compression_stream/: brotli_stream.cc  bzip_stream.cc  bzip_stream.hh  compression_stream.cc  compression_stream.hh  libz_stream.cc  libz_stream.hh  lzma_stream.cc  lzma_stream.hh  zstd_wrapper.c  zstd_wrapper.h
src/json/: json.cc
src/logger/: abstract_printer.cc  active_object.cc  console.cc  console_printer.cc  debug_device.cc  device.cc  file_device.cc  formatter.cc  layout.cc  layout_commands.cc  level.cc  local_device.cc  locus.cc  log_record_layout.cc  logger_helper.cc  predicate.cc  record.cc  rotating_device.cc  simple_printer.cc  standard_layout.cc  system.cc  thread_id.cc
src/mt/: active_object.cc  thread_id.cc
src/s11n/: archive.cc  json_archive_impl.cc  json_archive_impl.hh  yaml_archive_impl.cc  yaml_archive_impl.hh
src/strings/: ascii.cc  number_formatter.cc  number_parser.cc  numeric_string.cc  string_tokenizer.cc  wchar.cc
test/: CMakeLists.txt  main.cc
test/bsw/: fpe_test.cc  test_constexpr_for.cc  test_id.cc  test_introspection.cc  test_one_of.cc  test_random.cc  test_type_list.cc  test_type_name.cc  test_uuid.cc  uri_test.cc
test/bsw/digest/: test_digest.cc
test/bsw/io/: base_64_test.cc  binary_reader_writer.cc  digest_stream_test.cc  memory_stream.cc  stream_copy_test.cc  tee_stream_test.cc  zlib_test.cc
test/bsw/s11n/: test_s11n.cc
test/bsw/strings/: number_formatter_test.cc  string_constant_test.cc  string_tokenizer_test.cc  string_utils_test.cc  test_numeric_string.cc
